log
Tue 21 Mar 2023 03:46:43 PM UTC: 
 tests:  0|6
total_score: 0/70
d4836c0
Tue 21 Mar 2023 04:03:06 PM UTC: 
 list.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
95b6420
Tue 21 Mar 2023 04:17:24 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
de74ac1
Tue 21 Mar 2023 04:18:33 PM UTC: 
 list.c | 11 ++++++-----
 1 file changed, 6 insertions(+), 5 deletions(-)
In file included from test.c:5:
list.c: In function ‘createList’:
list.c:36:12: error: ‘lista’ undeclared (first use in this function); did you mean ‘list’?
   36 |     return lista;
      |            ^~~~~
      |            list
list.c:36:12: note: each undeclared identifier is reported only once for each function it appears in
list.c:37:1: error: control reaches end of non-void function [-Werror=return-type]
   37 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
4475cf2
